--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Improvr</title>
+    <script
+  async
+  src="https://pay.google.com/gp/p/js/pay.js"
+  onload​="onGooglePayLoaded()"
+>
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
