--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdn.paddle.com/paddle/paddle.js"></script>
+    <script type="text/javascript">
+  Paddle.Environment.set('sandbox');
+  Paddle.Setup({ vendor: 10357 });
+   </script>
   </body>
 </html>
