--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <script src="https://www.paypal.com/sdk/js?client-id=ATV2Co73t1tlgpv3pR_tKU7RQVo4CO1cpwLj-KQ4XFuVDzi1BfDKpcl83XnVeE1ynQZOYuDnIHcx2fB2&vault=true&intent=subscription"></script>
+
     <meta charset="utf-8" />
     <base href="/">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
