--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=Ae-Q0U7GrMTnN7ojJFSJ09PcGLuVfLi1D4zuCAW09tsrogHbvSiq_zAqmmL-L9EI6q7tI0o3rckO_bmw&vault=true&intent=subscription"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Ae-Q0U7GrMTnN7ojJFSJ09PcGLuVfLi1D4zuCAW09tsrogHbvSiq_zAqmmL-L9EI6q7tI0o3rckO_bmw"></script>
 
     <meta charset="utf-8" />
     <base href="/">
